# Abdulrahmanmoin-RAG-Chatbot-Physical-AI-Humanoid-Robotics-Textbook

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  check_count.py  check_count_qdrant.py  check_qdrant.py  check_status_file.py  debug_imports.py  debug_retrieval.py  ingest_success.txt  physical_ai_content.txt  pyproject.toml  requirements.txt  run_ingest.bat  simple_ingest.py  test_output.py  verify_data.py
src/agents/: rag_agent.py
src/api/: main.py
src/api/middleware/: error_handler.py  logging.py
src/api/routers/: chat.py  health.py
src/config/: database.py  settings.py  vector_store.py
src/models/: chunk.py  document.py  document_models.py  query.py  query_models.py
src/scripts/: ingest_documents.py
src/services/: embedding_service.py  openrouter_service.py  query_service.py  retrieval_service.py  validation_service.py
